# actix-web-todo-rest-api

./: .env.example  Cargo.toml  readme.md  todos.db
migrations/2021-04-24-063104_create_todos_table/: up.sql
src/: config.rs  controllers.rs  helpers.rs  main.rs  models.rs  schema.rs
