[package]
name = "actix-web-todos-rest-api"
version = "0.1.0"
authors = ["Nuku Malik Sanjaya Kusuma <nuku@softwareseni.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
diesel = { version = "1.4.4", features = ["sqlite"] }
# diesel_codegen = { version = "0.16.1", features = ["sqlite"] }
dotenv = "0.15.0"
serde = "1.0.125"
serde_json = "1.0.64"